--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/backend/ConnectionInstance.java=UTF-8
 encoding//src/client/AddStudent.java=UTF-8
 encoding//src/client/InputPoint.java=UTF-8
 encoding//src/client/StudentDashboard.java=UTF-8
